<resources>
    <string name="app_name">FEEDS</string>
    <string name="nav_header_title">Company Name</string>
    <string name="nav_header_subtitle">companyemail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_password">Create Password</string>
    <string name="loading">Loading....</string>
    <string name="search">search</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="products">Available Products</string>
    <string name="purchase">Own Purchase</string>
    <string name="customer_and_sale">Customer and Sale</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="quantity">Quantity</string>
    <string name="rate_cost_unit">Rate(Cost/Unit in Rs)</string>
    <string name="customer">Customer</string>
    <string name="total">Total(in Rs):</string>
    <string name="item">Item</string>
    <string name="total_due">Total Due(in Rs):</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="invoice">Invoice</string>
    <string name="enter">ENTER</string>
    <string name="remaining_due">Remaining Due</string>
    <string name="enter_date">Enter Date(ex:- 19–10–21)</string>
    <string name="due_remaining">Due remaining</string>
    <string name="balanced_sheet">Balanced Sheet</string>
    <string name="save">Save</string>
    <string name="customer_name">Customer name</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">Product quantity</string>
    <string name="cost_unit">Cost/Unit</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="date">Date</string>
    <string name="due_in_rs">Due(in Rs)</string>
    <string name="sorting">Sorting</string>
    <string name="cost_unit_in_rs">Cost/Unit(in Rs)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="intial_money">Initial Money</string>
    <string name="final_money">Final Money</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_final_drawer_money">Enter Final Drawer Money</string>
    <string name="view_invoice">View Invoice</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="update_customer">Update Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="search_available_product">Search Product To Buy</string>
    <string name="enter_0_in_case_of_no_due">Enter 0 in case of no due</string>
    <string name="fare_price">Fare price</string>
    <string name="enter_0_in_case_of_no_fare">Enter 0 in case of no fare</string>
</resources>