<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/etAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_name"
                android:autofillHints="Product Name"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:textColor="@color/black"
                android:textSize="18sp"/>


            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/quantity"
                android:autofillHints="@string/quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cost_unit_in_rs"
                android:autofillHints="Price"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </LinearLayout>

    <ImageView
        android:id="@+id/imgclose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/delete"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>