<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="5dp">
        <EditText
            android:id="@+id/etCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:autofillHints=""
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/etCustomerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:autofillHints=""
            android:maxLength="10"
            android:inputType="number" />
        <EditText
            android:id="@+id/etCustomerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:autofillHints=""
            android:inputType="text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>