<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <LinearLayout
        android:id="@+id/etAll"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/custombg"
                android:hint="@string/item" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etItemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/custombg"
                android:hint="@string/quantity" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <EditText
                android:id="@+id/etItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/custombg"
                android:hint="@string/cost_unit_in_rs" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgclose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/delete"
            android:padding="5dp"
            android:layout_weight=".5"
            android:src="@drawable/ic_close"/>

    </LinearLayout>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAll" />

</androidx.constraintlayout.widget.ConstraintLayout>