<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="5dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="Search Product"
            android:background="@drawable/autocomplete_background"
            android:inputType="text"
            android:completionThreshold="0"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/product_name"
            android:inputType="text"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/etProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/product_quantity"
            android:inputType="number"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/etProductRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rate_cost_unit"
            android:inputType="number"
            android:textSize="12sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
