<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/etDateToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/today_s_date"
            android:padding="10dp"
            android:layout_margin="20dp"/>


        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button_bg"
            android:drawableEnd="@drawable/ic_add"
            android:padding="10dp"
            android:text="@string/add_item"
            android:textAllCaps="false" />


            <EditText
                android:id="@+id/etFinalDrawerMoney"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:hint="@string/enter_final_drawer_money"
                android:inputType="number"
                android:autofillHints="" />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>