<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNewProductAtivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="56dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAddProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Product Name"
                    android:hint="@string/add_item"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/spinner_quantity_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="5dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Quantity"
                        android:hint="@string/quantity"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/etRatePerUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Cost"
                    android:hint="@string/rate_cost_unit"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_bg"
                android:text="@string/exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/accent_button_bg"
                android:text="@string/save"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/exit"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>