<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddItemToBuyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="LabelFor"
            android:hint="@string/search_available_product"
            android:background="@drawable/autocomplete_background"
            android:completionThreshold="0"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/btnAdd"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_margin="20dp"-->
<!--            android:background="@drawable/custom_button_bg"-->
<!--            android:drawableEnd="@drawable/ic_add"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/add_item"-->
<!--            android:textAllCaps="false" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button_bg"
                android:padding="10dp"
                android:text="Total"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/etTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Total Amount"
                android:inputType="number"
                android:gravity="center"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/due_in_rs"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etDue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Total"
                android:hint="@string/enter_0_in_case_of_no_due"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/fare_price"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etFare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Total"
                android:hint="@string/enter_0_in_case_of_no_fare"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/accent_button_bg"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>